finished IoT background, missing OH and ESH

--- a/master-thesis.bib
+++ b/master-thesis.bib
@@ -13,11 +13,124 @@
 % ESH Fork with JWT Authentication https://github.com/antoniosv/smarthome/tree/customhttpcontext/bundles/auth/org.eclipse.smarthome.auth.jwt
 % Orange: the future of digital trust https://www.orange.com/en/content/download/21358/412063/version/5/file/Orange+Future+of+Digital+Trust+Report.pdf
 
+@article{ALABA201710,
+title = "Internet of Things security: A survey",
+journal = "Journal of Network and Computer Applications",
+volume = "88",
+number = "Supplement C",
+pages = "10 - 28",
+year = "2017",
+issn = "1084-8045",
+doi = "https://doi.org/10.1016/j.jnca.2017.04.002",
+url = "http://www.sciencedirect.com/science/article/pii/S1084804517301455",
+author = "Fadele Ayotunde Alaba and Mazliza Othman and Ibrahim Abaker Targio Hashem and Faiz Alotaibi",
+keywords = "IoT, Security, Privacy"
+}
+
+@inproceedings{Zhang:2015,
+ author = {Zhang, Zhi-Kai and Cho, Michael Cheng Yi and Shieh, Shiuhpyng},
+ title = {Emerging Security Threats and Countermeasures in IoT},
+ booktitle = {Proceedings of the 10th ACM Symposium on Information, Computer and Communications Security},
+ series = {ASIA CCS '15},
+ year = {2015},
+ isbn = {978-1-4503-3245-3},
+ location = {Singapore, Republic of Singapore},
+ pages = {1--6},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/2714576.2737091},
+ doi = {10.1145/2714576.2737091},
+ acmid = {2737091},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {authentication, communication, iot, privacy, security},
+} 
+
+@article{HELLAOUI2017173,
+title = "Energy-efficient mechanisms in security of the internet of things: A survey",
+journal = "Computer Networks",
+volume = "127",
+number = "Supplement C",
+pages = "173 - 189",
+year = "2017",
+issn = "1389-1286",
+doi = "https://doi.org/10.1016/j.comnet.2017.08.006",
+url = "http://www.sciencedirect.com/science/article/pii/S1389128617303146",
+author = "Hamed Hellaoui and Mouloud Koudil and Abdelmadjid Bouabdallah",
+keywords = "Internet of Things (IoT), Security, Energy efficiency"
+}
+
+@article {DAC3323,
+author = {Dhillon, Parwinder Kaur and Kalra, Sheetal},
+title = {Secure multi-factor remote user authentication scheme for Internet of Things environments},
+journal = {International Journal of Communication Systems},
+volume = {30},
+number = {16},
+issn = {1099-1131},
+url = {http://dx.doi.org/10.1002/dac.3323},
+doi = {10.1002/dac.3323},
+pages = {e3323--n/a},
+keywords = {biometrics, IoT, key agreement, remote user authentication, security},
+year = {2017},
+note = {e3323 IJCS-16-0515.R1},
+}
+
+
+
+@misc{rest_01,
+ author = {W3C Working Group},
+ title = {Web Services Architecture},
+ year = {2004},
+ howpublished = {\url{https://www.w3.org/TR/2004/NOTE-ws-arch-20040211/#relwwwrest}}
+}
+
+@misc{rest_02,
+ title = {The Java EE 6 Tutorial. Chapter 20, Building RESTful Web Services with JAX-RS},
+ author = {Oracle},
+ year = {2013},
+ howpublished = {\url{https://docs.oracle.com/javaee/6/tutorial/doc/giepu.html}}
+}
+
+@misc{rest_03,
+ title = {{OSGi - JAX-RS Connector 5.3.1}},
+ note = {Date accessed: 2018-05-12},
+ howpublished = {\url{https://github.com/hstaudacher/osgi-jax-rs-connector}}
+}
+
 @misc{servlet,
  author = {Oracle},
  title = {Lesson 5: Writing Servlets},
  howpublished = {Technical tutorial},
  url = {http://www.oracle.com/technetwork/java/servlet-142430.html}
+}
+
+@misc{httpservice,
+ author = {OSGi Alliance},
+ title = {Interface HttpService, OSGi Service Platform Version 4.2},
+ howpublished = {Technical documentation},
+ year = {2010}, 
+ url = {https://osgi.org/javadoc/r4v42/org/osgi/service/http/HttpService.html}
+}
+
+@misc{httpcontext,
+ author = {OSGi Alliance},
+ title = {Interface HttpContext, OSGi Service Platform Version 4.2},
+ year = {2010}, 
+ howpublished = {\url{https://osgi.org/javadoc/r4v42/org/osgi/service/http/HttpContext.html}}
+}
+
+@misc{httpwhiteboard_01,
+  author = {Apache Felix},
+  title = {{Apache Felix HTTP Service}},
+  year = {2017},
+  month = {November},
+  howpublished = {\url{https://felix.apache.org/documentation/subprojects/apache-felix-http-service.html}}
+}
+
+@misc{httpwhiteboard_02,
+  author = {Jan Willem Janssen and Marcel Offermans},
+  title = {Felix HTTP. Paving the road to the future},
+  note = {Accessed: 2018-05-12},
+  howpublished = {\url{https://events.static.linuxfound.org/sites/events/files/slides/Felix\%20HTTP\%20-\%20Paving\%20the\%20road\%20to\%20the\%20future_0.pdf}}
 }
 
 @techreport{osgi_core,
